# sparse-but-wrong-paper

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yaml
notebooks/: intuition_plot.ipynb  main_toy_model_experiments.ipynb  open_source_saes_analysis.ipynb  small_toy_model_experiments.ipynb  toy_model_experiments_independent_features.ipynb  toy_model_experiments_jumprelu.ipynb  train_and_eval_llm_sae.ipynb
sparse_but_wrong/: __init__.py  enchanced_batch_topk_sae.py  nth_decoder_projection.py  util.py
sparse_but_wrong/toy_models/: eval_sae.py  get_training_batch.py  helpers.py  initialization.py  orthogonalize.py  plotting.py  toy_model.py  train_toy_sae.py
tests/: conftest.py  helpers.py  test_enhanced_batch_topk_sae.py  test_util.py
tests/toy_models/: test_get_training_batch.py  test_orthogonalize.py  test_plotting.py  test_toy_model.py  test_train_toy_sae.py
