[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sparse-but-wrong"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.5",
    "plotly>=6.3.0",
    "sae-lens>=6.6.3",
    "seaborn>=0.13.2",
    "tueplots>=0.2.1",
]

[dependency-groups]
dev = ["pyright>=1.1.403", "pytest>=8.4.1", "ruff>=0.12.9", "ipykernel>=6.30.1"]

[tool.ruff]
exclude = ["dist", "docs", "*.ipynb"]

[tool.ruff.lint]
ignore = ["E203", "E501", "E731"]
extend-select = ["UP", "TID", "I", "F", "E", "ARG"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Union".msg = "Use `|` instead"
"typing.Optional".msg = "Use `| None` instead"
"typing.Dict".msg = "Use `dict` instead"
"typing.Tuple".msg = "Use `tuple` instead"
"typing.List".msg = "Use `list` instead"

[tool.pyright]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
